[package]
name = "feedrick"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"


[dependencies]
buffered_offset_reader = "0.3"
clap = "~2.32.0"
flumedb = { git = "https://github.com/sunrise-choir/flumedb-rs", version = "0.1.2" }
itertools = "0.8.1"
ssb-verify-signatures = {git = "https://github.com/sunrise-choir/ssb-verify-signatures"}
ssb-validate = {git = "https://github.com/sunrise-choir/ssb-validate", version= "0.1.1"}
rayon = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1"
